# upen

./: .gitignore  all_tabs.py  comments.txt  cookies.pkl  errors.txt  id.py  loggers.py  login.py  progress.tmp  pyproject.toml  scrape.py  utils.py
Scraped/: tabs.json  w12_view_public.json  w4_view_public.json  w5_view.json  w6_view.json  w7_view.json
pdf_scrape/: pdf.py  pdfs.py  progress.tmp  progress_0.tmp  progress_1.tmp  progress_2.tmp  progress_3.tmp  progress_4.tmp  progress_5.tmp  progress_6.tmp  progress_7.tmp  progress_8.tmp  progress_9.tmp  selenium_pdfs.py  stop.py  test.ipynb
